Factored js form into its own component + removing some debug code.
* New form component that includes inputs into its slot.
* go program lost some debug code.
* Integrate go build with vue build.
* Support for checkboxes as a self-validating component.

--- a/templates/home.page.gohtml
+++ b/templates/home.page.gohtml
@@ -23,7 +23,7 @@
             <p>There's nothing to see here yet!</p>
 
             {{ if $vue }}
-            <div id="app">
+            <div id="app" data-entryp="login">
             </div>
             {{ end }}
         </main>
