--- a/templates/home.page.gohtml
+++ b/templates/home.page.gohtml
@@ -15,20 +15,28 @@
         {{end }}
     </head>
     <body>
+      <div class="container">
         <header>
-            <h1><a href='/'>Snippetbox</a></h1>
+            <h1>Embedding Vue 3 Apps Using Go</h1>
         </header>
         <nav>
             <a href="/">Home</a>
         </nav>
         <main>
-            <h2>Latest Snippets</h2>
-            <p>There's nothing to see here yet!</p>
+          <p>
+          This webapp embeds Vue 3 components, and injects them into
+          pages served by a simple golang web server.  Points in the
+          DOM that get "decorated" by Vue are marked with the
+          <code>data-entryp</code> attribute, which uses a key
+          to indicate which component should get injected to that
+          point in the DOM.
+          </p>
 
-            {{ if $vue }}
-            <div id="app" data-entryp="app">
-            </div>
+        {{ if $vue }}
+        <div id="app" data-entryp="app">
+        </div>
             {{ end }}
         </main>
+        </div>
     </body>
 </html>
